--- a/requirements.txt
+++ b/requirements.txt
@@ -125,6 +125,7 @@ tzlocal==2.0.0
 ujson==4.0.2
 urllib3==1.25.8
 uvicorn==0.13.4
+uvloop==0.14.0
 virtualenv==20.4.2
 watchgod==0.7
 websockets==8.1
